# AlgorithmsCourseVK

./: .clang-format  README.md
homework1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
homework2/: task1.cpp  task2.cpp  task4.cpp
homework3/: task2.cpp  task3.cpp
homework3/task1/: CMakeLists.txt  main.cpp
homework3/task1/graphs/: ArcGraph.cpp  ArcGraph.h  CMakeLists.txt  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h
homework3/task1/tests/: CMakeLists.txt  tests_graphs.cpp
rk1/: task1.cpp  task2.cpp  task3.cpp
rk2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
rk3/: task1.cpp  task2.cpp  task3.cpp
